[gd_scene load_steps=10 format=3 uid="uid://djr8nw1v3rx1f"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_rj45m"]
[ext_resource type="Texture2D" uid="uid://b7t762pqxax0b" path="res://assets/sprites/dotted_line_texture.png" id="2_k7tdo"]
[ext_resource type="PackedScene" uid="uid://8ko6o140hlpj" path="res://scenes/player.tscn" id="3_hc1wn"]
[ext_resource type="PackedScene" uid="uid://cv8i0fxthkbg2" path="res://scenes/ball.tscn" id="4_kldgl"]
[ext_resource type="FontFile" uid="uid://cncjostucxix7" path="res://assets/fonts/ARCADECLASSIC.TTF" id="5_sf8u2"]
[ext_resource type="AudioStream" uid="uid://bwfavg4khncio" path="res://assets/sounds/hit1.wav" id="6_1se1g"]
[ext_resource type="AudioStream" uid="uid://lte2ywy6tb5m" path="res://assets/sounds/point.wav" id="7_jvwpu"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_xken7"]
distance = -6.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ibv5c"]
size = Vector2(75, 784)

[node name="VS Player" type="Node2D"]
script = ExtResource("1_rj45m")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.0392157, 0.0392157, 0.0392157, 1)

[node name="Line2D" type="Line2D" parent="."]
texture_repeat = 2
position = Vector2(640, 0.0684929)
scale = Vector2(1, 1.0137)
points = PackedVector2Array(0, 0, 0, 720)
width = 5.0
texture = ExtResource("2_k7tdo")
texture_mode = 1

[node name="Player" parent="." instance=ExtResource("3_hc1wn")]
position = Vector2(50, 345)
scale = Vector2(10, 10)

[node name="Player2" parent="." instance=ExtResource("3_hc1wn")]
position = Vector2(1230, 345)
scale = Vector2(10, 10)
SIDE = "p2"

[node name="Ball" parent="." instance=ExtResource("4_kldgl")]
position = Vector2(640, 345)
collision_mask = 1

[node name="Borders" type="Node" parent="."]

[node name="World Border" type="Area2D" parent="Borders"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/World Border"]
position = Vector2(0, 8)
rotation = -3.14159
shape = SubResource("WorldBoundaryShape2D_xken7")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Borders/World Border"]
position = Vector2(0, 712)
shape = SubResource("WorldBoundaryShape2D_xken7")

[node name="StaticBody2D" type="StaticBody2D" parent="Borders/World Border"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/World Border/StaticBody2D"]
position = Vector2(0, 5)
rotation = -3.14159
shape = SubResource("WorldBoundaryShape2D_xken7")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Borders/World Border/StaticBody2D"]
position = Vector2(0, 716)
shape = SubResource("WorldBoundaryShape2D_xken7")

[node name="Left" type="Area2D" parent="Borders"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/Left"]
position = Vector2(-39, 360)
shape = SubResource("RectangleShape2D_ibv5c")

[node name="Right" type="Area2D" parent="Borders"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/Right"]
position = Vector2(1319, 360)
shape = SubResource("RectangleShape2D_ibv5c")

[node name="P1_SCORE" type="Label" parent="."]
offset_left = 492.0
offset_right = 558.0
offset_bottom = 122.0
theme_override_fonts/font = ExtResource("5_sf8u2")
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 2

[node name="P2_SCORE" type="Label" parent="."]
offset_left = 722.0
offset_right = 777.0
offset_bottom = 102.0
theme_override_fonts/font = ExtResource("5_sf8u2")
theme_override_font_sizes/font_size = 100
text = "0"

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_1se1g")
volume_db = 10.0

[node name="point" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_jvwpu")

[connection signal="body_entered" from="Borders/World Border" to="." method="_on_world_border_body_entered"]
[connection signal="body_entered" from="Borders/Left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="Borders/Right" to="." method="_on_right_body_entered"]
